kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcm-robot-app
spec:
  selector:
    matchLabels:
      app: tcm-robot-app
  template:
    metadata:
      labels:
        app: tcm-robot-app
    spec:
      containers:
        - name: app
          image: tcm-robot-app:latest
          ports:
            - containerPort: 5000
