kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tcm-robot-app-service
spec:
  selector:
    app: tcm-robot-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
